# python-project-52

./: .flake8  Makefile  README.md  db.sqlite3  pyproject.toml
.github/workflows/: python.yml
locales/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: factories.py  test_labels.py  test_models.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_status_name.py
task_manager/statuses/tests/: factories.py  test_models.py  test_statuses.py
task_manager/tasks/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0003_task_timestamp.py  0004_alter_task_timestamp.py  0005_task_labels.py
task_manager/tasks/tests/: factories.py  test_models.py  test_tasks.py
task_manager/templates/: base_layout.html  index.html
task_manager/templates/labels/: create.html  delete.html  index.html  label_list.html  update.html
task_manager/templates/registration/: login.html
task_manager/templates/statuses/: create.html  delete.html  index.html  status_list.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
(+17 files in other folders)
