[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Fourth Hexlet Project"
authors = ["Vladimir Bazhanov <vladimir.a.bazhanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.4"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
